🍂🐢 Checkpoint ./index.html:28093501/662

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       </figure>
       
       <ul>
-        <li>Octopuses have <strong>3</strong> hearts</li>
-        <li>Octopuses have blue blood</li>
-        <li>Octopuses have <strong>9</strong> brains</li>
+        <li>JPG stands for Joint Photographic Group</li>
+        <li>30% of images on the web are JPG format</li>
+        <li>JPG format requires more processing processing power to show an image</li>
       </ul>
       
       <h2>
